# Enigma

./: .gitignore
Enigma_Console/: CMakeLists.txt  Enigma.cpp  Enigma.hpp  main.cpp  main.hpp
Enigma_Core/: CMakeLists.txt  Enigma.cpp  Enigma.hpp  main.cpp  main.hpp  turing.cpp  turing.hpp
Enigma_lib/: Enigma.cpp  Enigma.hpp  main.cpp
enigma_Qt/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
enigma_test/: CMakeLists.txt  main.cpp  tst_core.cpp
